feat: user routes documentation
